--- a/Database2FinalProject/src/main/java/ui/TaskUI.form
+++ b/Database2FinalProject/src/main/java/ui/TaskUI.form
@@ -264,11 +264,11 @@
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="5" rowCount="4">
-                        <Column editable="true" title="NAME" type="java.lang.Object"/>
-                        <Column editable="true" title="START DATE" type="java.lang.Object"/>
-                        <Column editable="true" title="END DATE" type="java.lang.Object"/>
-                        <Column editable="true" title="DESCRIPTION" type="java.lang.Object"/>
-                        <Column editable="true" title="STATUS" type="java.lang.Object"/>
+                        <Column editable="true" title="NAME" type="java.lang.String"/>
+                        <Column editable="true" title="START DATE" type="java.lang.String"/>
+                        <Column editable="true" title="END DATE" type="java.lang.String"/>
+                        <Column editable="true" title="DESCRIPTION" type="java.lang.String"/>
+                        <Column editable="true" title="STATUS" type="java.lang.String"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
